styles/main.scss
@charset "utf-8";

// Customization

// You can easily customize Bulma with your own variables.
// Just uncomment the following block to see the result.

/*
   // 1. Import the initial variables
   @import "../node_modules/bulma/sass/utilities/initial-variables";

   // 2. Set your own initial variables
   // Update the blue shade, used for links
   $blue: #06bcef;
   // Add pink and its invert
   $pink: #ff8080;
   $pink-invert: #fff;
   // Update the sans-serif font family
   $family-sans-serif: "Helvetica", "Arial", sans-serif;

   // 3. Set the derived variables
   // Use the new pink as the primary color
   $primary: $pink;
   $primary-invert: $pink-invert;

   // 4. Import the rest of Bulma
 */

@import "../node_modules/bulma/sass/utilities/initial-variables";

@font-face {
  font-family: 'coquette_bold';
  src: url('../static/coquette_bold-webfont.woff2') format('woff2'),
  url('../static/coquette_bold-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;

}

@font-face {
  font-family: 'coquette_light';
  src: url('../static/coquette_light-webfont.woff2') format('woff2'),
  url('../static/coquette_light-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;

}

@font-face {
  font-family: 'coquette_regular';
  src: url('../static/coquette_regular-webfont.woff2') format('woff2'),
  url('../static/coquette_regular-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

$family-sans-serif: "coquette_regular",  "Helvetica", "Arial", sans-serif;
$body-background-color: #FFEAE3; //#FFD6C7;
$body-color: #525252;
$primary: #FFEAE3; // #FFD6C7;
$link: #d78300;
$secondary: #d78300;
$dark: $secondary;

@import "../node_modules/bulma/bulma";

.us {
  background-image: linear-gradient(
    rgba(255, 214, 199, 0.1),
    rgba(255, 214, 199, 0.5)
  ), url(../static/us_big.jpg);
  background-position: center center;
  background-repeat:no-repeat;
  background-size: cover;
}

.heading, .subtitle {
  text-transform: none;
}

.logo {
  font-family: coquette_bold;
  font-size: 4rem !important;
  color: $primary !important;
  text-shadow: 2px 2px 0 $body-color;
  margin-top: 18rem;
}

.small-logo {
  font-family: coquette_bold;
  font-size: 2rem;
}

.content h3 {
  color: $secondary;
}
.content h1,
.content h2,
.content h4,
.content h5,
.content h6 {
  color: $body-color;
}

html {
  scroll-behavior: smooth;
}

#map {
  min-height: 750px;
}

.footer {
  padding: 2rem 1.5rem 2rem;
}

ul {
  list-style: none; /* Remove default bullets */
}

#marriage, #rsvp, #photos {
  background-color: white;
}

.main-heading {
  margin-top: 2rem;
}


.intro, .about {
  margin: 4rem 0 6rem 0;
}

.lower-heading {
  margin-bottom: 1.5rem;
}

.iframe-container {
  height: 0;
  overflow: hidden;
  padding-bottom: 60%; /* aspect ratio */
  position: relative;
  iframe {
    border: 0;
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
  }
}

